--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,17 +1,17 @@
 # syntax=docker/dockerfile:1.7
 
 # Multi-stage build for CUDA-enabled PyTorch development environment
-# Uses NVIDIA CUDA 12.6.0 development with optimized layer caching
+# Uses NVIDIA CUDA 12.8.1 development with optimized layer caching
 
 # ==============================================================================
 # CUDA Base Stage - NVIDIA CUDA development with complete toolkit
 # ==============================================================================
-FROM 12.6.0-cudnn-devel-ubuntu24.04 AS cuda-base
+FROM nvidia/cuda:12.8.1-cudnn-devel-ubuntu24.04 AS cuda-base
 
 # Build arguments for cache control and versioning
 ARG BUILDKIT_INLINE_CACHE=1
 ARG PYTHON_VERSION=3.12
-ARG CUDA_VERSION=12.6.0
+ARG CUDA_VERSION=12.8.1
 ARG APP_USER=ubuntu
 ARG APP_UID=1000
 ARG APP_GID=1000
@@ -26,7 +26,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     LIBRARY_PATH=/usr/local/cuda/lib64/stubs:${LIBRARY_PATH} \
     NVIDIA_VISIBLE_DEVICES=all \
     NVIDIA_DRIVER_CAPABILITIES=compute,utility \
-    NVIDIA_REQUIRE_CUDA="cuda>=12.6.0" \
+    NVIDIA_REQUIRE_CUDA="cuda>=${CUDA_VERSION}" \
     LANG=C.UTF-8 \
     LC_ALL=C.UTF-8 \
     # PyTorch CUDA optimization
@@ -36,7 +36,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PYTORCH_CUDA_ALLOC_CONF="max_split_size_mb:512,garbage_collection_threshold:0.6"
 
 # Verify CUDA installation and create symlinks
-RUN ln -sf /usr/local/cuda-12.6.0 /usr/local/cuda && \
+RUN ln -sf /usr/local/cuda-${CUDA_VERSION} /usr/local/cuda && \
     echo "/usr/local/cuda/lib64" >> /etc/ld.so.conf.d/cuda.conf && \
     echo "/usr/local/cuda/compat" >> /etc/ld.so.conf.d/cuda.conf && \
     ldconfig && \
@@ -69,11 +69,6 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     htop iotop ncdu tree vim tmux screen \
     # Math libraries
     bc \
-    # Additional CUDA development packages
-    cuda-toolkit-12-6 \
-    libcudnn8-dev \
-    libnccl-dev \
-    libcublas-dev-12-6 \
     # Cleanup in same layer
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && git lfs install --system \
@@ -159,18 +154,12 @@ FROM python-env AS deps-install
 # Copy dependency files first for better Docker layer caching
 COPY --chown=${APP_USER}:${APP_USER} pyproject.toml uv.lock* ./
 
+RUN echo nvidia-smi
+
 # Install PyTorch CUDA dependencies and other packages
 RUN --mount=type=cache,target=/home/${APP_USER}/.cache/uv,uid=${APP_UID},gid=${APP_GID} \
     . .venv/bin/activate && \
-    # Install CUDA-enabled PyTorch first
-    uv pip install \
-    --extra-index-url https://download.pytorch.org/whl/cu126 \
-    "torch>=2.0.0" \
-    "torchvision>=0.15.0" \
-    "torchaudio>=2.0.0" && \
-    # Then install other dependencies
     uv sync \
-    --index-strategy unsafe-best-match \
     --compile-bytecode && \
     echo "All dependencies installed successfully"
 
@@ -267,10 +256,10 @@ CMD ["/bin/bash", "-l"]
 # ==============================================================================
 LABEL org.opencontainers.image.title="torch_starter" \
     org.opencontainers.image.description="CUDA-enabled PyTorch development environment with Python 3.12" \
-    org.opencontainers.image.version="2.2-cuda12.6.0" \
+    org.opencontainers.image.version="2.2-cuda${CUDA_VERSION}" \
     org.opencontainers.image.vendor="PyTorch DevContainer" \
     org.opencontainers.image.licenses="MIT" \
-    cuda.version="12.6.0" \
+    cuda.version="${CUDA_VERSION}" \
     pytorch.version=">=2.0.0" \
     python.version="3.12"
 
