--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "torch_starter-cuda (CUDA 12.8.1, uv, Py3.12)",
+  "name": "torch_starter-cuda (PyTorch 2.8.0, CUDA 12.9, uv, Py3.12)",
   "build": {
     "dockerfile": "Dockerfile",
     "context": "..",
@@ -9,7 +9,7 @@
       "--build-arg",
       "PYTHON_VERSION=3.12",
       "--build-arg",
-      "CUDA_VERSION=12.8.1"
+      "CUDA_VERSION=12.9"
     ]
   },
   "runArgs": [
@@ -40,11 +40,11 @@
     "PYTHONDONTWRITEBYTECODE": "1",
     "PYTHONUNBUFFERED": "1",
     "PYTHONOPTIMIZE": "1",
-    "CUDA_VERSION": "12.8.1",
+    "CUDA_VERSION": "12.9",
     "CUDA_VISIBLE_DEVICES": "all",
     "NVIDIA_VISIBLE_DEVICES": "all",
     "NVIDIA_DRIVER_CAPABILITIES": "compute,utility",
-    "NVIDIA_REQUIRE_CUDA": "cuda>=12.8.1",
+    "NVIDIA_REQUIRE_CUDA": "cuda>=12.9",
     "TORCH_CUDA_ARCH_LIST": "7.0;7.5;8.0;8.6;8.9;9.0",
     "FORCE_CUDA": "1",
     "PYTORCH_CUDA_ALLOC_CONF": "max_split_size_mb:512,garbage_collection_threshold:0.6",
@@ -262,7 +262,7 @@
   "securityOpt": [
     "seccomp=unconfined"
   ],
-  "onCreateCommand": "echo '🏗️  Container created successfully - Setting up CUDA environment...'",
+  "onCreateCommand": "echo '🏗️  Container created successfully - Setting up PyTorch 2.8.0 + CUDA 12.9 environment...'",
   "updateContentCommand": "echo '🔄 Content updated - Verifying Python environment...' && source .venv/bin/activate && python -c 'import torch; print(f\"✅ Environment ready - PyTorch {torch.__version__} CUDA: {torch.cuda.is_available()}\")'",
   "postStartCommand": "echo '🚀 Development environment ready!' && echo '💡 Use \"gpu-monitor\" to monitor GPU usage' && echo '💡 Use \"torch-info\" to check PyTorch CUDA status'",
   "waitFor": "postCreateCommand"
